[tool.poetry]
name = "ds-hw-3"
version = "0.1"
description = "-"
authors = ["Your Name <you@example.com>"]
license = "Mit License"
readme = "README.md"
packages = [{include = "ds_hw_3"}]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
